--- a/src/css/apps/user/settings.css
+++ b/src/css/apps/user/settings.css
@@ -1,4 +1,6 @@
 @import url("./settings/sidebar.css");
+@import url("./settings/page/account.css");
+@import url("./settings/section.css");
 
 #systemSettings > div.body {
   padding: 0;
@@ -27,4 +29,11 @@
 #systemSettings > div.body div.container h1.page-title {
   font-size: 24px;
   margin: 12px 5px;
+}
+
+#systemSettings > div.body div.centered-layout {
+  width: 100%;
+  height: 100%;
+  padding: 0 50px;
+  text-align: center;
 }
