--- a/src/css/window/button.css
+++ b/src/css/window/button.css
@@ -47,14 +47,20 @@ div.window div.body button:not(.reset).suggested:active {
   filter: brightness(0.8);
 }
 
-div.window.glass > div.body button:not(.reset):not(.suggested):not(.menu-item) {
+div.window.glass
+  > div.body
+  button:not(.reset):not(.suggested):not(.menu-item):not(.no-glass) {
   background-color: var(--button-glass-bg, #fff1);
 }
 
-div.window.glass > div.body button:not(.reset):not(.menu-item):hover {
+div.window.glass
+  > div.body
+  button:not(.reset):not(.suggested):not(.menu-item):not(.no-glass):hover {
   background-color: var(--button-glass-hover-bg, #fff3);
 }
 
-div.window.glass > div.body button:not(.reset):not(.menu-item):active {
+div.window.glass
+  > div.body
+  button:not(.reset):not(.suggested):not(.menu-item):not(.no-glass):active {
   background-color: var(--button-glass-active-bg, #0005);
 }
