`spawnOverlay`, continue themes apg

--- a/src/css/apps/user/settings.css
+++ b/src/css/apps/user/settings.css
@@ -28,6 +28,7 @@
   padding-top: 10px;
   height: calc(100% - 40px);
   transition: pointer-events 0s, scale 0.3s, opacity 0.3s;
+  overflow-y: auto;
 }
 
 #systemSettings > div.body div.page-content.hide {
