context menus (single-depth) and more themes page stuff

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,6 +7,7 @@
 @import url("./themes.css");
 @import url("./noani.css");
 @import url("./sharp.css");
+@import url("./contextmenu.css");
 
 html,
 body {
