TODOs, login background page

--- a/src/css/apps/user/settings.css
+++ b/src/css/apps/user/settings.css
@@ -4,6 +4,7 @@
 @import url("./settings/page/account.css");
 @import url("./settings/page/themes.css");
 @import url("./settings/page/wallpaper.css");
+@import url("./settings/page/loginbackground.css");
 @import url("./settings/overlay/savetheme.css");
 @import url("./settings/slide.css");
 
