--- a/src/css/apps/user/settings/themesheader.css
+++ b/src/css/apps/user/settings/themesheader.css
@@ -46,6 +46,22 @@
   flex-direction: column;
 }
 
+#systemSettings div.themes-header div.screen.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+#systemSettings div.themes-header div.screen.login img {
+  height: 36px;
+  border-radius: 18px;
+}
+
+#systemSettings div.themes-header div.screen.login p {
+  font-size: 10px;
+}
+
 #systemSettings div.themes-header div.fake-window div.heading {
   width: 50px;
   height: 3px;
