--- a/src/css/window.css
+++ b/src/css/window.css
@@ -4,6 +4,7 @@
 @import url("./window/overlay.css");
 @import url("./window/body.css");
 @import url("./window/button.css");
+@import url("./window/checkbox.css");
 @import url("./window/fields.css");
 @import url("./window/code.css");
 @import url("./window/scrollbars.css");
