--- a/src/css/apps/user/settings/section.css
+++ b/src/css/apps/user/settings/section.css
@@ -8,6 +8,7 @@
   margin-bottom: 8px;
   opacity: 0.5;
   font-weight: bold;
+  text-align: left;
 }
 
 #systemSettings section div.content {
@@ -29,6 +30,16 @@
 
 #systemSettings section div.content div.option div.right {
   height: fit-content;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+#systemSettings section div.content div.option button.lucide {
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  font-size: 16px;
 }
 
 #systemSettings
