--- a/src/css/apps/components/shell/taskbar/openedapps.css
+++ b/src/css/apps/components/shell/taskbar/openedapps.css
@@ -28,6 +28,10 @@ div.shell div.taskbar div.opened-apps::-webkit-scrollbar {
   white-space: nowrap;
 }
 
+#arcShell div.shell div.taskbar div.opened-apps button.iconic {
+  padding: 5px;
+}
+
 #arcShell div.shell div.taskbar div.opened-apps button span {
   max-width: calc(100% - 34px);
   display: block;
