--- a/src/css/apps/components/shell/pushnotification.css
+++ b/src/css/apps/components/shell/pushnotification.css
@@ -3,7 +3,7 @@ div.shell div.push-notification {
   bottom: 10px;
   right: 10px;
   max-width: 400px;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(var(--blur));
   border: var(--border);
   display: flex;
   align-items: start;
