--- a/src/css/apps/user/settings/slide.css
+++ b/src/css/apps/user/settings/slide.css
@@ -12,7 +12,7 @@
 
 #systemSettings div.slide-wrapper.visible {
   pointer-events: initial;
-  backdrop-filter: blur(8px);
+  backdrop-filter: blur(var(--blur));
   background-color: #0004;
 }
 
@@ -23,7 +23,7 @@
   translate: 100% 0;
   transition: translate 0.3s;
   padding: 15px;
-  padding-top: 45px;
+  padding-top: 50px;
   overflow-y: scroll;
 }
 
