--- a/src/css/apps/user/settings/themesheader.css
+++ b/src/css/apps/user/settings/themesheader.css
@@ -27,7 +27,7 @@
   width: 100%;
   height: 20px;
   border: var(--win-border) 1px solid;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(var(--blur));
   background-color: var(--glass-bg);
   border-radius: 5px;
 }
@@ -37,7 +37,7 @@
   height: 80px;
   border-radius: 8px;
   background-color: var(--glass-bg);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(var(--blur));
   border: var(--win-border);
   padding: 12px;
   margin-right: 10px;
