Search page, verbose login messages

--- a/src/css/apps/core/loginapp.css
+++ b/src/css/apps/core/loginapp.css
@@ -132,6 +132,7 @@ div.window#loginApp p.loading {
   font-weight: bold;
   font-size: 18px;
   color: #fff;
+  text-align: center;
 }
 
 div.window#loginApp div.topbar {
