--- a/src/css/apps/components/shell/taskbar.css
+++ b/src/css/apps/components/shell/taskbar.css
@@ -60,7 +60,7 @@ div.shell div.taskbar button.action-center-button span {
   font-size: 16px;
 }
 
-div.shell div.taskbar div.battery,
+div.shell div.taskbar div.status-tray,
 div.shell div.taskbar div.system-area {
   background-color: var(--button-glass-bg);
   height: 40px;
@@ -70,15 +70,18 @@ div.shell div.taskbar div.system-area {
   border-radius: 8px;
 }
 
+div.shell div.taskbar div.status-tray {
+  gap: 10px;
+}
+
 div.shell div.taskbar div.battery {
-  /* width: 40px; */
-  padding: 0 10px;
-  justify-content: center;
+  display: flex;
+  align-items: center;
   gap: 5px;
 }
 
-div.shell div.taskbar div.battery span.lucide {
-  font-size: 16px;
+div.shell div.taskbar div.status-tray span.lucide {
+  font-size: 18px;
 }
 
 div.shell div.taskbar > *:not(.opened-apps) {
