--- a/src/css/apps/user/settings/section.css
+++ b/src/css/apps/user/settings/section.css
@@ -15,6 +15,7 @@
 #systemSettings section div.content {
   border-radius: 10px;
   background-color: var(--button-bg);
+  overflow: hidden;
 }
 
 #systemSettings section div.content div.option {
@@ -23,6 +24,15 @@
   justify-content: space-between;
   height: 41px;
   padding: 0 10px;
+  transition: background-color 0.2s;
+}
+
+#systemSettings section div.content div.option.clickable:hover {
+  background-color: var(--button-hover-bg);
+}
+
+#systemSettings section div.content div.option.clickable:active {
+  background-color: var(--button-active-bg);
 }
 
 #systemSettings section div.content div.option.chevron div.right {
