--- a/src/css/apps/user/settings/section.css
+++ b/src/css/apps/user/settings/section.css
@@ -62,12 +62,7 @@
   font-size: 16px;
 }
 
-#systemSettings
-  section
-  div.content
-  div.option
-  div.right
-  > span.lucide.icon-chevron-right {
+#systemSettings section div.content div.option div.right > span.lucide {
   font-size: 16px;
   opacity: 0.5;
 }
