Effectively finish the base settings app

--- a/src/css/apps/user/settings.css
+++ b/src/css/apps/user/settings.css
@@ -6,6 +6,7 @@
 @import url("./settings/page/wallpaper.css");
 @import url("./settings/page/security.css");
 @import url("./settings/page/loginbackground.css");
+@import url("./settings/page/about.css");
 @import url("./settings/overlay/savetheme.css");
 @import url("./settings/slide.css");
 @import url("./settings/slide/weatherlocation.css");
