--- a/src/css/apps/user/settings/page/account.css
+++ b/src/css/apps/user/settings/page/account.css
@@ -1,4 +1,9 @@
-#systemSettings div.container.account div.centered-layout > div.header img {
+#systemSettings
+  div.container.account
+  > div.page-content
+  > div.centered-layout
+  > div.header
+  img {
   height: 128px;
   border-radius: 64px;
 }
