HTML spinner improvements

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,6 +8,7 @@
 @import url("./noani.css");
 @import url("./sharp.css");
 @import url("./contextmenu.css");
+@import url("./spinner.css");
 
 html,
 body {
