Refine secure context stuff

--- a/src/css/apps/components/securecontext/actions.css
+++ b/src/css/apps/components/securecontext/actions.css
@@ -5,7 +5,7 @@
   margin-top: auto;
   border-top: var(--win-border);
   padding: 10px;
-  background-color: var(--button-bg);
+  background-color: var(--button-glass-bg);
   margin: 0;
   display: flex;
   gap: 10px;
