--- a/src/css/apps/core/loginapp.css
+++ b/src/css/apps/core/loginapp.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap");
 
-div.window#loginApp div.container:not(.full) {
+div.window#loginApp div.container {
   background: linear-gradient(to bottom, #0006 0%, #0006 100%), var(--bgurl);
   background-position: center;
   background-size: cover;
@@ -8,7 +8,7 @@ div.window#loginApp div.container:not(.full) {
 }
 
 div.window#loginApp button:not(.continue) {
-  padding: 12px 20px;
+  padding: 8px 20px;
   background-color: #fff1;
   border: none;
   border-radius: 10px;
@@ -32,7 +32,7 @@ div.window#loginApp div.container {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 40px;
+  gap: 30px;
   transition: opacity 0.3s, pointer-events 0s;
 }
 
@@ -45,8 +45,8 @@ div.window#loginApp div.container.hide {
 }
 
 div.window#loginApp div.container .profile-picture {
-  width: 150px;
-  height: 150px;
+  width: 128px;
+  height: 128px;
   border-radius: 50%;
   background-image: var(--src);
   background-size: cover;
@@ -57,8 +57,8 @@ div.window#loginApp div.container .profile-picture {
 div.window#loginApp div.container div.field {
   display: flex;
   align-items: center;
-  width: 250px;
-  height: 42px;
+  width: 220px;
+  height: 37px;
   border-radius: 10px;
   background-color: #fff1;
   border: #fff2 1px solid;
@@ -72,10 +72,10 @@ div.window#loginApp div.container div.field:last-child {
 }
 
 div.window#loginApp div.container div.field div.lucide {
-  width: 41px;
-  height: 40px;
+  width: 36px;
+  height: 35px;
   border-right: #fff2 1px solid;
-  font-size: 24px;
+  font-size: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -87,19 +87,19 @@ div.window#loginApp div.container div.field input {
   color: #fff;
   flex-grow: 1;
   padding: 0 10px;
-  height: 40px;
+  height: 35px;
 }
 
 div.window#loginApp div.login-form {
   display: flex;
   align-items: end;
   gap: 10px;
-  width: 250px;
+  width: 220px;
 }
 
 div.window#loginApp div.login-form button.continue {
-  width: 42px;
-  height: 42px;
+  width: 37px;
+  height: 37px;
   border-radius: 50%;
   padding: 0;
   border: none;
@@ -107,7 +107,7 @@ div.window#loginApp div.login-form button.continue {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 24px;
+  font-size: 16px;
   backdrop-filter: blur(var(--blur));
   transition: background-color 0.2s, opacity 0.2s;
 }
@@ -133,62 +133,6 @@ div.window#loginApp p.loading {
   font-size: 18px;
   color: #fff;
   text-align: center;
-}
-
-div.window#loginApp div.topbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: fixed;
-  top: 10px;
-  left: 10px;
-  width: calc(100% - 20px);
-  height: 40px;
-  /* background-color: var(--button-glass-active-bg); */
-  backdrop-filter: blur(var(--blur));
-  border-radius: 10px;
-  padding: 0 15px;
-  padding-right: 5px;
-  transition: translate 0.2s;
-}
-div.window#loginApp div.topbar.hide {
-  translate: 0 -50px;
-}
-
-div.window#loginApp div.topbar div.version {
-  opacity: 0.5;
-}
-
-div.window#loginApp div.topbar div.time {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  text-align: center;
-  pointer-events: none;
-  font-weight: bold;
-}
-
-div.window#loginApp div.topbar div.actions button {
-  width: 30px;
-  height: 30px;
-  font-size: 16px;
-  margin: 0;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-  border-radius: 50%;
-  backdrop-filter: unset;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-div.window#loginApp div.topbar div.actions button:hover {
-  background-color: var(--button-glass-bg);
-}
-
-div.window#loginApp div.topbar div.actions button:active {
-  background-color: var(--button-glass-active-bg);
 }
 
 div.window#loginApp div.power-options {
@@ -229,42 +173,6 @@ div.window#loginApp div.power-options button.shutdown {
   width: 50px;
   height: 50px;
   font-size: 24px;
-}
-
-div.window#loginApp div.lock-screen {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 15vh 0;
-  background-image: url("../../../assets/bg/img15.jpg");
-  background-position: center;
-  background-size: cover;
-  transition: translate 0.2s, opacity 0s, pointer-events 0s;
-}
-
-div.window#loginApp div.lock-screen.hide {
-  translate: 0 -100vh;
-  opacity: 0;
-  pointer-events: none;
-  transition: translate 0.4s, opacity 0.2s 0.7s, pointer-events 0s;
-}
-
-div.window#loginApp div.lock-screen h1 {
-  font-size: 96px;
-  font-family: "Fredoka";
-  font-weight: 500;
-  color: #fff;
-}
-
-div.window#loginApp div.lock-screen p.date {
-  font-size: 20px;
-  color: #fff;
-  opacity: 0.7;
 }
 
 @keyframes new-login-show {
