--- a/src/css/apps/user/settings.css
+++ b/src/css/apps/user/settings.css
@@ -9,6 +9,7 @@
 @import url("./settings/page/about.css");
 @import url("./settings/overlay/savetheme.css");
 @import url("./settings/overlay/changeusername.css");
+@import url("./settings/overlay/changepassword.css");
 @import url("./settings/slide.css");
 @import url("./settings/slide/weatherlocation.css");
 @import url("./settings/slide/userstyle.css");
