--- a/src/css/apps/user/settings.css
+++ b/src/css/apps/user/settings.css
@@ -14,6 +14,7 @@
 @import url("./settings/slide/weatherlocation.css");
 @import url("./settings/slide/userstyle.css");
 @import url("./settings/slide/loginactivity.css");
+@import url("./settings/slide/managerotur.css");
 
 #systemSettings > div.body {
   padding: 0;
