--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,6 +10,7 @@
 @import url("./contextmenu.css");
 @import url("./spinner.css");
 @import url("./tty.css");
+@import url("./virtualdesktop.css");
 
 html,
 body {
