--- a/src/css/window/overlay.css
+++ b/src/css/window/overlay.css
@@ -10,7 +10,7 @@ div.window > div.overlay-wrapper {
   justify-content: center;
   align-items: center;
   z-index: 100000000000000000;
-  transition: opacity 0.3s, pointer-events 0s;
+  transition: opacity 0.3s, pointer-events 0s, visiblity 0.3s;
   opacity: 0;
 }
 
@@ -27,5 +27,6 @@ div.window > div.overlay-wrapper.visible:not(.closing) {
 }
 div.window > div.overlay-wrapper.visible.closing {
   opacity: 0;
-  pointer-events: none;
+  pointer-events: none !important;
+  visibility: hidden !important;
 }
