--- a/src/css/apps/components/shell.css
+++ b/src/css/apps/components/shell.css
@@ -1,6 +1,7 @@
 @import url("./shell/actioncenter.css");
 @import url("./shell/taskbar.css");
 @import url("./shell/startmenu.css");
+@import url("./shell/workspaces.css");
 @import url("./shell/pushnotification.css");
 @import url("./shell/colored.css");
 
