--- a/src/css/contextmenu.css
+++ b/src/css/contextmenu.css
@@ -1,4 +1,4 @@
-div.context-menu {
+#arcShell div.context-menu {
   position: fixed;
   top: var(--y, -1000px);
   left: var(--x, -1000px);
@@ -11,12 +11,12 @@ div.context-menu {
   border-radius: 10px;
   box-shadow: 0 5px 15px 5px #0003;
   opacity: 1;
-  pointer-events: initial;
+  pointer-events: initial !important;
   visibility: visible;
   transition: opacity 0.2s, pointer-events 0.2s, visibility 0.2s;
 }
 
-div.context-menu button {
+#arcShell div.context-menu button {
   width: 100%;
   text-align: left;
   border: none;
@@ -28,25 +28,26 @@ div.context-menu button {
   display: flex;
   align-items: center;
   gap: 10px;
+  pointer-events: initial !important;
 }
 
-div.context-menu button:not(:disabled):hover {
+#arcShell div.context-menu button:not(:disabled):hover {
   background-color: var(--button-glass-bg);
 }
 
-div.context-menu button:not(:disabled):active {
+#arcShell div.context-menu button:not(:disabled):active {
   background-color: var(--button-glass-active-bg);
 }
 
-div.context-menu button:disabled {
+#arcShell div.context-menu button:disabled {
   opacity: 0.5;
 }
 
-div.context-menu button.default > span {
+#arcShell div.context-menu button.default > span {
   font-weight: bold;
 }
 
-div.context-menu button span.checked {
+#arcShell div.context-menu button span.checked {
   display: none;
   margin-left: auto;
   opacity: 0.5;
@@ -54,34 +55,34 @@ div.context-menu button span.checked {
   height: 16px;
 }
 
-div.context-menu button.checked span.checked {
+#arcShell div.context-menu button.checked span.checked {
   display: block;
 }
 
-div.context-menu.hidden {
+#arcShell div.context-menu.hidden {
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
 }
 
-div.context-menu span.icon-wrapper {
+#arcShell div.context-menu span.icon-wrapper {
   width: 16px;
   height: 16px;
   min-width: 16px;
 }
 
-div.context-menu span.icon-wrapper span.lucide {
+#arcShell div.context-menu span.icon-wrapper span.lucide {
   width: 16px;
   height: 16px;
   font-size: 16px;
 }
 
-div.context-menu span.icon-wrapper img {
+#arcShell div.context-menu span.icon-wrapper img {
   width: 16px;
   height: 16px;
 }
 
-div.context-menu hr {
+#arcShell div.context-menu hr {
   margin: 5px;
   border: var(--button-glass-bg) 1px solid;
   border-bottom: none;
