Fix some virtual desktop bugs

--- a/src/css/apps/components/shell/workspaces.css
+++ b/src/css/apps/components/shell/workspaces.css
@@ -56,8 +56,9 @@
 }
 
 #arcShell div.virtual-desktops button.desktop div.number {
-  width: 32px;
+  min-width: 32px;
   height: 32px;
+  padding: 0 10px;
   background-color: var(--button-bg);
   text-align: center;
   line-height: 32px;
