--- a/src/css/window.css
+++ b/src/css/window.css
@@ -52,7 +52,7 @@ div.window:not(.core).minimized {
 }
 
 div.window *::selection {
-  background-color: var(--accent-transparent);
+  background-color: var(--accent-transparent, var(--accent-dark));
 }
 
 div:not(.noani) div.window:not(.core) {
